#159 Alignment bug in Command editor buttons

--- a/chrome/skin/classic/mac/toolbars.css
+++ b/chrome/skin/classic/mac/toolbars.css
@@ -13,3 +13,9 @@
 .theme-firebug toolbarbutton[type="menu-button"] > .toolbarbutton-menubutton-button {
   padding: 3px 3px 0 3px;
 }
+
+/* The  copy button in the Command Editor needs to be aligned with the other buttons */
+.theme-firebug #firebug-commandeditor-copy .toolbarbutton-menubutton-button label {
+  padding-top: 0;
+  padding-bottom: 3px;
+}
